--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -7,7 +7,7 @@
 
 # The following line activates a set of recommended lints for Flutter apps,
 # packages, and plugins designed to encourage good coding practices.
-include: package:flutter_lints/flutter.yaml
+include: package:lint/analysis_options.yaml
 
 linter:
   # The lint rules applied to this project can be customized in the
@@ -25,5 +25,10 @@ linter:
     # avoid_print: false  # Uncomment to disable the `avoid_print` rule
     # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
 
+    curly_braces_in_flow_control_structures: false
+
+    avoid_classes_with_only_static_members: false
+
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
+# https://github.com/passsy/dart-lint/blob/master/lib/analysis_options.yaml
